--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -13,6 +13,7 @@ img {
     align-items: center;
     align-content: center;
     flex-direction: column;
+    padding: 1rem;
 }
 
 .sign-in{
@@ -31,22 +32,42 @@ img {
     font-size: 14px;
     line-height: 1.15;
     font: arial;
+    
 }
 
 .line {
     border: none;
-    color: #000000;
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
+    color: #FFFFFF;
+    height: 3rem;
+    background-color: transparent;
     border-bottom-style: groove;
-    width: 300px;
+    width: 375px;
+    font-family: 'Arimo', sans-serif;
+    font-size: 18px;
+    margin-bottom: 1rem;
 }
 
 .sign-in-bottom {
     color: #FFFFFF;
     font-family: 'Arimo', sans-serif;
     font-size: 14px;
+}
+
+.demo {
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: #000000;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    width: auto;
+    min-width: 200px;
+    margin: 10px 86px 10px;
+    padding: 14px 30px;
+    border-radius: 10rem;
+    align-content: center;
+    text-align: center;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
 }
 
 
@@ -66,7 +87,7 @@ a:visited {
     box-sizing: border-box;
     width: auto;
     min-width: 200px;
-    margin: 90px 86px 0px;
+    margin: 70px 86px 5px;
     padding: 14px 30px;
     border-radius: 10rem;
     align-content: center;
@@ -91,4 +112,7 @@ a:visited {
 
 .errors {
     color: red;
+    font-family: 'Arimo', sans-serif;
+    font-size: 14px;
+    align-content: center;
 }
