--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,4 +1,4 @@
-img {
+.eqx-logo {
     width: auto;
     height: 17px;
     display: flex;
@@ -8,12 +8,19 @@ img {
     text-align: center;
 }
 
-.eqx-logo {
+.sign-in-wrapper {
     display: flex;
     align-items: center;
     align-content: center;
     flex-direction: column;
-    padding: 1rem;
+}
+
+.sign-in-content {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+    max-width: 575px;
 }
 
 .sign-in{
@@ -31,7 +38,8 @@ img {
     opacity: 0.6;
     font-size: 14px;
     line-height: 1.15;
-    font: arial;
+    font-family: 'Arimo', sans-serif;
+    font-size: 12px;
     
 }
 
@@ -41,7 +49,8 @@ img {
     height: 3rem;
     background-color: transparent;
     border-bottom-style: groove;
-    width: 375px;
+    border-color: #FFFFFF;
+    width: 100%;
     font-family: 'Arimo', sans-serif;
     font-size: 18px;
     margin-bottom: 1rem;
@@ -85,19 +94,23 @@ a:visited {
     color: #000000;
     background-color: #FFFFFF;
     box-sizing: border-box;
-    width: auto;
     min-width: 200px;
-    margin: 70px 86px 5px;
+    margin: 70px 0px;
     padding: 14px 30px;
     border-radius: 10rem;
     align-content: center;
     text-align: center;
     transition: 0.2s ease-in-out;
     cursor: pointer;
+    justify-content: center;
 }
 
 .button:hover {
     background-color:#d1d1d1
+}
+
+.demo:hover {
+    background-color: #d1d1d1
 }
 
 .sign-up {
