--- a/frontend/src/components/GroupsPage/GroupIndex.css
+++ b/frontend/src/components/GroupsPage/GroupIndex.css
@@ -1,10 +1,6 @@
 
 .weekday {
-    display: flex;
     color: #FFFFFF;
-    margin-bottom: 10px;
-    align-content: space-between;
-    align-items: center;
     font-family: 'Arimo', sans-serif;
     font-size: 14px; 
 }
@@ -18,10 +14,30 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-left: 120px;
+    margin-right: 120px;
 }
 
-.show-class-info {
-    margin: 10px 10px 10px 10px;
+
+.class-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.class-title {
+    color: #FFFFFF;
+    padding: 0px 5px;
+    font-size: 48px;
+    line-height: 110%;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'League Gothic', sans-serif;
+    margin-bottom: 20px;
+}
+
+.class-container {
+    padding-top: 75px;
 }
 
 
