--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,14 +1,3 @@
-.nav-bar {
-    position: relative;
-    width: 100%;
-    max-width: 1440px;
-    height: 98px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    
-}
 
 .nav-buttons {
     align-items: center;
@@ -16,13 +5,28 @@
 
 .top-bar {
     text-decoration: none;
-    margin-left: 100px;
-    margin-right: 100px;
     color: #FFFFFF99;
     font-family: 'Arimo', sans-serif;
     font-size: 14px;
+    margin-top: .70rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    list-style: none;
 }
 
 .top-bar:hover {
     color: #FFFFFF;
 }
+
+.nav-container {
+    position: fixed;
+    width: 100%;
+    max-width: 1440px;
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: black;
+    align-items: center;
+}
+
