--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -1,6 +1,9 @@
 .container {
     display: inline-block;
     cursor: pointer;
+    position: absolute;
+    top: 1.5rem;
+    right: 2rem;
 }
 
 .bar1,
