--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,12 +1,3 @@
-.eqx-logo {
-    width: auto;
-    height: 17px;
-    display: flex;
-    vertical-align: middle;
-    align-items: center;
-    margin: 0px 0px 40px;
-    text-align: center;
-}
 
 .errors {
     color: red;
@@ -59,6 +50,8 @@ label {
     align-items: center;
     align-content: center;
     flex-direction: column;
+    margin-top: 110px;
+
 }
 
 .errors {
