--- a/frontend/src/components/GroupsPage/GroupIndex.css
+++ b/frontend/src/components/GroupsPage/GroupIndex.css
@@ -16,6 +16,7 @@
     justify-content: space-between;
     margin-left: 120px;
     margin-right: 120px;
+    padding-top: 40px;
 }
 
 
@@ -27,17 +28,23 @@
 
 .class-title {
     color: #FFFFFF;
-    padding: 0px 5px;
+    padding: 20px 5px;
     font-size: 48px;
     line-height: 110%;
     text-transform: uppercase;
     text-align: center;
     font-family: 'League Gothic', sans-serif;
     margin-bottom: 20px;
+    margin-top: 15px;
 }
 
 .class-container {
     padding-top: 75px;
+}
+
+.show-class-info {
+    padding-top: 50px;
+    margin-left: 120px;
 }
 
 
