--- a/frontend/src/components/SingleGroupPage/SingleGroupPage.css
+++ b/frontend/src/components/SingleGroupPage/SingleGroupPage.css
@@ -2,5 +2,139 @@
     color: #FFFFFF;
     font-family: 'Arimo', sans-serif;
     font-size: 14px;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.show-image {
+    height: 450px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.group-title {
+    font-size: 80px;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'League Gothic', sans-serif;
+}
+
+.book-button {
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: #000000;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    width: auto;
+    min-width: 200px;
+    margin: 20px 86px 0px;
+    padding: 14px 30px;
+    border-radius: 10rem;
+    align-content: center;
+    text-align: center;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+    width: 30px;
+}
+
+.book-button:hover {
+    background-color: #d1d1d1
+}
+
+.group-information {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 10px;
+}
+
+.group-location {
+    padding-top: 20px;
+}
+
+.group-time {
+    padding-bottom: 20px;
+}
+
+.review-title {
+    font-size: 60px;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'League Gothic', sans-serif;
+    color: #FFFFFF;
+    padding-top: 5rem;
+}
+
+.review-form-submit-button {
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: #000000;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    width: auto;
+    min-width: 200px;
+    margin: 20px 86px 0px;
+    padding: 14px 30px;
+    border-radius: 10rem;
+    align-content: center;
+    text-align: center;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+    width: 30px;
+}
+
+.review-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center ;
+}
+
+.summary {
+    color: #FFFFFF;
+    font-family: 'Arimo', sans-serif;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    width: 100%;
+}
+
+.review-form-submit-button:hover {
+    background-color: #d1d1d1
+}
+
+.summary-input {
+    color: #000000;
+}
+
+.review-elements {
+    color: #FFFFFF;
+    font-family: 'Arimo', sans-serif;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.review-elements-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.review-header {
+    font-size: 40px;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'League Gothic', sans-serif;
+    color: #FFFFFF;
+    padding-top: 5rem;
+}
+
+
 
