--- a/frontend/src/components/SingleGroupPage/SingleGroupPage.css
+++ b/frontend/src/components/SingleGroupPage/SingleGroupPage.css
@@ -116,7 +116,7 @@
     font-family: 'Arimo', sans-serif;
     font-size: 14px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
 
@@ -125,6 +125,7 @@
 .review-elements-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .review-header {
@@ -134,6 +135,32 @@
     font-family: 'League Gothic', sans-serif;
     color: #FFFFFF;
     padding-top: 5rem;
+}
+
+.single-review {
+    display: flex;
+    flex-direction: row;
+}
+
+.review-edit-button {
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: #000000;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    width: auto;
+    min-width: 200px;
+    margin: 20px 86px 0px;
+    padding: 14px 30px;
+    border-radius: 10rem;
+    align-content: center;
+    text-align: center;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.review-edit-button:hover {
+    color: #d1d1d1;
 }
 
 
