--- a/frontend/src/components/GroupsPage/AdminGroupCreate.css
+++ b/frontend/src/components/GroupsPage/AdminGroupCreate.css
@@ -19,6 +19,26 @@
     background-color: #d1d1d1;
 }
 
-/* .edit-create-modal {
-    background-color: #000000;
-} */
+.Overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(8, 9, 10, 0.8);
+    z-index: 500;
+    transition: background-color 200ms;
+}
+
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: all 200ms;
+}
+
+.ReactModal__Overlay--after-open {
+    opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+    opacity: 0;
+}
