--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -20,6 +20,8 @@
 
 .nav-container {
     position: fixed;
+    top: 0px;
+    left: 0px;
     width: 100vw;
     height: 100px;
     display: flex;
