--- a/frontend/src/components/SingleGroupPage/SingleGroupPage.css
+++ b/frontend/src/components/SingleGroupPage/SingleGroupPage.css
@@ -115,11 +115,12 @@
     color: #FFFFFF;
     font-family: 'Arimo', sans-serif;
     font-size: 14px;
-    height: 70px;
-    width: 100%;
+    height: 60px;
+    width: 89%;
     background-color: #000000;
     border-color: #FFFFFF;
     border-radius: 10px;
+    padding: 20px;
 }
 
 input:focus {
