--- a/frontend/src/components/ClubsPage/ClubsPage.css
+++ b/frontend/src/components/ClubsPage/ClubsPage.css
@@ -1,5 +1,12 @@
 .map-container {
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: 55vh;
+    border-radius: 30px;
 }
 
+.map-around {
+    display: flex;
+    width: 45%;
+    margin-top: 200px;
+    margin-left: 750px;
+}
