--- a/frontend/src/components/GroupsPage/GroupIndex.css
+++ b/frontend/src/components/GroupsPage/GroupIndex.css
@@ -38,7 +38,6 @@
     text-transform: uppercase;
     text-align: center;
     font-family: 'League Gothic', sans-serif;
-    margin-bottom: 20px;
     margin-top: 15px;
 }
 
@@ -58,6 +57,32 @@
     font-size: 14px;
     padding: 5px;
     border-radius: 5px;
+}
+
+.add-class-button {
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: #000000;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    width: auto;
+    min-width: 50px;
+    padding: 7px 15px;
+    border-radius: 10rem;
+    align-content: center;
+    text-align: center;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+    border: none;
+}
+
+.add-class-container {
+    display: flex;
+    justify-content: center;
+}
+
+.add-class-button:hover {
+    background-color: #d1d1d1;
 }
 
 
