--- a/frontend/src/components/SingleGroupPage/ReviewButton.css
+++ b/frontend/src/components/SingleGroupPage/ReviewButton.css
@@ -13,6 +13,7 @@
     cursor: pointer;
     margin-left: 50px;
     border: none;
+    margin-bottom: 20px;
   
 }
 
@@ -43,6 +44,6 @@
 
 .edit-button-container {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
 }
