Finished Landing page

--- a/frontend/src/components/GroupsPage/AdminGroupCreate.css
+++ b/frontend/src/components/GroupsPage/AdminGroupCreate.css
@@ -93,6 +93,7 @@ button {
     text-align: center;
     font-family: 'League Gothic', sans-serif;
     margin-bottom: 10px;
+    margin-top: 1px;
 }
 
 .errors {
