--- a/frontend/src/components/ClubsPage/ClubsPage.css
+++ b/frontend/src/components/ClubsPage/ClubsPage.css
@@ -1,12 +1,17 @@
 .map-container {
-    width: 75%;
-    height: 55vh;
+    width: 500px;
+    height: 500px;
     border-radius: 30px;
 }
 
 .map-around {
     display: flex;
-    width: 45%;
-    margin-top: 200px;
-    margin-left: 750px;
+    width: 500px;
+    margin-top: 150px;
+    margin-left: 500px;
+}
+
+.club-array {
+    display: flex;
+    flex-direction: row;
 }
