--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -18,7 +18,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 800px;
-    overflow: hidden;
+  
 }
 
 .background-image-gym {
@@ -28,6 +28,11 @@
 .background-image-nyc {
     background-image: url('../../../public/equinoxny.jpg');
 
+}
+
+.background-image-video {
+    height: fit-content;
+    position: relative;
 }
 
 /* .video-container {
@@ -71,7 +76,9 @@ video {
     margin-left: 120px;
     position: absolute;
     z-index: 2;
+
 }
+
 
 .second-greeting {
     width: 300px;
@@ -119,7 +126,7 @@ video {
     font-size: 56px;
     font-family: 'League Gothic', sans-serif;
     color: #000000;
-    margin-bottom: 40px;
+    margin-top: 5px;
     
 }
 
@@ -127,6 +134,7 @@ video {
     font-size: 16px;
     font-family: 'Arimo', sans-serif;
     color: #000000;
+    margin-top: 30px;
 
 }
 
@@ -134,6 +142,19 @@ video {
     font-size: 40px;
     font-family: 'League Gothic', sans-serif;
     color: #FFFFFF;
+}
+
+@media screen and (max-width: 1200px) {
+    .greeting {
+        margin-top: 5px;
+    }
+    .hero-big {
+        font-size: 70px
+    }
+
+    .hero-little {
+        font-size: 30px
+    }
 }
 
 .squat {
@@ -152,14 +173,14 @@ video {
     font-size: 56px;
     font-family: 'League Gothic', sans-serif;
     color: #FFFFFF;
-    margin-bottom: 40px;
+    margin-top: 5px;
 }
 
 .third-little {
     font-size: 16px;
     font-family: 'Arimo', sans-serif;
     color: #FFFFFF;
-    margin-bottom: 40px;
+    margin-top: 30px;
 
 }
 
@@ -168,7 +189,7 @@ video {
     flex-direction: row;
     justify-content: space-between;
     position: absolute;
-    margin-top: 600px;
+    margin-top: 750px;
     backdrop-filter: blur(10px);
     background-color: rgba(1, 1, 1, 0.2);
 }
@@ -195,4 +216,6 @@ video {
     border-top: 2px solid #FFFFFF;
     padding: 20px;
 }
+
+
 
