--- a/frontend/src/components/ClubsPage/SingleLocation.css
+++ b/frontend/src/components/ClubsPage/SingleLocation.css
@@ -1,10 +1,20 @@
-h1 {
-    margin-top: 100px;
+.single-club {
     color: white;
-    font-family: 'League Gothic', sans-serif;
+    font-family: "Arimo";
     font-size: 16px;
+    margin-left: 40px;
+    margin-bottom: 70px;
+    width: 100%;
+    height: 20px;
 }
 
 .single-club:hover {
     cursor: pointer;
+}
+
+.single-club-container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 150px;
+    width: 1000px;
 }
