--- a/frontend/src/components/ClubsPage/RenderClubs.css
+++ b/frontend/src/components/ClubsPage/RenderClubs.css
@@ -13,8 +13,10 @@
     transition: 0.2s ease-in-out;
     cursor: pointer;
     border: none;
+    position: absolute;
 }
 
 .filter-button:hover {
     background-color: #d1d1d1;
 }
+
