--- a/frontend/src/components/ClubsPage/SingleLocation.css
+++ b/frontend/src/components/ClubsPage/SingleLocation.css
@@ -18,3 +18,12 @@
     padding-top: 150px;
     width: 1000px;
 }
+
+.club-location-class-name {
+        display: none;
+        position: absolute;
+        background-color: #f6f6f6;
+        min-width: 230px;
+        border: 1px solid #ddd;
+        z-index: 1;
+}
