--- a/frontend/src/components/ClubsPage/ClubsPage.css
+++ b/frontend/src/components/ClubsPage/ClubsPage.css
@@ -6,11 +6,28 @@
 
 .map-around {
     display: flex;
-    width: 500px;
     margin-top: 130px;
 }
-
 .club-array {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
+
+.marker {
+    opacity: .5;
+}
+
+.list-side {
+    width: 100%;
+}
+
+.map-side {
+    width: 100%;
+}
+
+icon {
+    color: blue;
+}
+
