--- a/frontend/src/components/ClubsPage/SingleClub.css
+++ b/frontend/src/components/ClubsPage/SingleClub.css
@@ -1,8 +1,16 @@
-h1{
-    color: white;
+.club-locations-class-page {
+    border: 1px solid #FFFFFF;
+    color:#FFFFFF;
+    font-family: "Arimo";
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    height: 20px;
+    position: relative;
 }
-
 
 .club-locations-class-page:hover {
     cursor: pointer;
 }
+
