--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -69,7 +69,7 @@
     box-sizing: border-box;
     width: auto;
     min-width: 200px;
-    margin: 10px 86px 10px;
+    margin: 10px 76px 10px;
     padding: 14px 30px;
     border-radius: 10rem;
     align-content: center;
@@ -101,11 +101,29 @@ a:visited {
     border: none;
 }
 
+.button-sign-in {
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: #000000;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    min-width: 200px;
+    margin-top: 30px;
+    padding: 14px 20px;
+    border-radius: 10rem;
+    text-align: center;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+    border: none;
+    margin-bottom: 5px;
+
+}
+
 .button-wrapper {
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 8rem;
+    height: 5.3rem;
 }
 
 .button:hover {
