--- a/frontend/src/components/ClubsPage/SingleLocation.css
+++ b/frontend/src/components/ClubsPage/SingleLocation.css
@@ -2,8 +2,8 @@
     color: white;
     font-family: "Arimo";
     font-size: 16px;
-    margin-left: 40px;
-    margin-bottom: 70px;
+    margin-left: 120px;
+    margin-bottom: 2px;
     width: 100%;
     height: 20px;
 }
@@ -15,8 +15,9 @@
 .single-club-container {
     display: flex;
     flex-direction: column;
-    padding-top: 150px;
-    width: 1000px;
+    padding-top: 30px;
+    width: 100%;
+    text-decoration: underline;
 }
 
 .club-location-class-name {
@@ -26,4 +27,11 @@
         min-width: 230px;
         border: 1px solid #ddd;
         z-index: 1;
+}
+
+.single-club-location {
+    font-family: 'League Gothic', sans-serif;
+    font-size: 30px;
+    margin-bottom: 15px;
+
 }
