--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -35,34 +35,6 @@
     position: relative;
 }
 
-/* .video-container {
-    position: relative;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.video-container video {
-    /* Make video to at least 100% wide and tall */
-    /* min-width: 100%;
-    min-height: 100%;
-    object-fit: contain; */
-
-    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
-    /* width: auto;
-    height: auto; */
-
-    /* Center the video */
-    /* position: relative;
-    top: 50%;
-    left: 50%;
-    transform: scale(0.1);
-    transform: translate(-50%, -50%)
-     */
-/* } */ 
-
 video {
     position: relative;
     width: 100%;
@@ -78,7 +50,6 @@ video {
     z-index: 2;
 
 }
-
 
 .second-greeting {
     width: 300px;
@@ -155,6 +126,30 @@ video {
     .hero-little {
         font-size: 30px
     }
+}
+
+@media screen and (max-width: 670px) {
+    .greeting {
+        margin-top: 70px;
+    }
+
+    .hero-big  {
+        font-size: 40px
+    }
+
+    .hero-little  {
+        font-size: 20px
+    }
+
+    .third-big, .second-big {
+        font-size: 30px;
+    }
+
+    .third-little, .second-little {
+        font-size: 15px;
+    }
+
+
 }
 
 .squat {
