--- a/frontend/src/components/ClubsPage/ShowClubs.css
+++ b/frontend/src/components/ClubsPage/ShowClubs.css
@@ -1,5 +1,12 @@
 .dropdown {
     position: absolute;
     margin-top: 32px;
-    background-color: black;
+    background-color: white;
+    border-radius: 4px;
 }
+
+.dropdown-item {
+    display: flex;
+    align-items: center;
+}
+
