--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -12,7 +12,7 @@
     align-items: center;
     align-content: center;
     flex-direction: column;
-    padding-top: 150px;
+    padding-top: 100px;
 }
 
 .sign-in-content {
@@ -45,6 +45,7 @@
 .line {
     border: none;
     color: white;
+    opacity: 0.6;
     height: 2rem;
     background-color: black;
     border-bottom-style: groove;
@@ -52,7 +53,10 @@
     font-family: 'Arimo', sans-serif;
     font-size: 14px;
     margin-bottom: 1rem;
-    
+}
+
+.line:focus {
+    opacity: 1;
 }
 
 .sign-in-bottom {
@@ -152,6 +156,12 @@ a:visited {
 }
 
 input {
-    color: #FFFFFF;
     padding: 10px;
+    color: white;
+    opacity: 0.6;
+}
+
+input:focus {
+    color: white;
+    opacity: 1;
 }
