--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -4,7 +4,7 @@
 }
 
 label {
-    color: #FFFFFF;
+    color: #d1d1d1;
 }
 
 .sign-up-form-button {
@@ -15,7 +15,7 @@ label {
     box-sizing: border-box;
     width: auto;
     min-width: 200px;
-    margin: 20px 86px 0px;
+    margin: 10px 86px 40px 86px;
     padding: 14px 30px;
     border-radius: 10rem;
     align-content: center;
@@ -30,11 +30,14 @@ label {
 }
 
 .inputs {
-    color: #FFFFFF;
-    opacity: 0.6;
     font-size: 14px;
     line-height: 1.15;
     font-family: 'Arimo', sans-serif;
+}
+
+.line:focus.inputs {
+    color: white;
+    opacity: 1;
 }
 
 .sign-up-logo {
