--- a/frontend/src/components/ClubsPage/SingleLocation.css
+++ b/frontend/src/components/ClubsPage/SingleLocation.css
@@ -31,7 +31,9 @@
 
 .single-club-location {
     font-family: 'League Gothic', sans-serif;
-    font-size: 30px;
-    margin-bottom: 15px;
+    font-size: 40px;
+    margin-bottom: 25px;
+    letter-spacing: 1.5px;
+
 
 }
