--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -187,6 +187,7 @@ video {
     margin-top: 750px;
     backdrop-filter: blur(10px);
     background-color: rgba(1, 1, 1, 0.2);
+    width: 100%;
 }
 
 .single-div:hover {
